--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -268,3 +268,21 @@
 </script>
 {% endif %}
 
+<!-- katex -->
+<script>
+  $("script[type='math/tex']").replaceWith(function() {
+      var tex = $(this).text();
+      return katex.renderToString(tex, {displayMode: false});
+  });
+
+  $("script[type='math/tex; mode=display']").replaceWith(function() {
+      var tex = $(this).html();
+      return katex.renderToString(tex.replace(/%.*/g, ''), {displayMode: true});
+  });
+</script>
+
+<!-- sequence -->
+<script>
+  var diagram = Diagram.parse("A->B: Message");
+  diagram.drawSVG("language-sequence", {theme: 'simple'});
+</script>
